argocd/applications/rook-ceph/tailscale-service-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceph-dashboard-tailscale
  namespace: rook-ceph
  annotations:
    tailscale.com/hostname: ceph
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app: rook-ceph-mgr
    mgr_role: active
    rook_cluster: rook-ceph
  ports:
    - name: http
      port: 80
      targetPort: 7000
