argocd/applications/rook-ceph/ingressroute-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`ceph.lan`)
      services:
        - name: rook-ceph-mgr-dashboard
          port: 7000
